<resources>

    <string name="app_name">WeCare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>

    <!-- Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>


    <string name="title_activity_entry">EntryActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>


    <string name="not_signup_yet">"No account yet?<b> Create one</b>"</string>
    <string name="already_member">"Already a member? <b>Login</b>"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>


    <string name="google_maps_api">AIzaSyCWk4jh3IxB9OBFyKPJEy74PjSIUBG-36U</string>
    <!--
    <string name="google_maps_api">AIzaSyARTGuB08jwv4iIyr2qsqgRGgNzdMa2I5I</string>

-->


    <string name="title_activity_drawer_navigation">DrawerNavigationActivity</string>

    <string name="title_activity_main_drawer_navigation">MainDrawerNavigationActivity</string>

</resources>